# 20-Embedded-Patterns-Every-Engineer-Should-Know

./: CMakeLists.txt  README.md  Vagrantfile
Chapter01_DataflowAndControl/: README.md
Chapter02_HostFirstDevelopment/: README.md
Chapter03_EventLoops/: CMakeLists.txt  README.md  ch03_tmux_layout.sh  run_nmea_sources.sh
Chapter03_EventLoops/readiness_demo/: CMakeLists.txt  README.md  ch03_tmux_layout.sh  nmea_monitor.cpp  run_nmea_sources.sh
Chapter04_QueuesBuffersBackpressure/: CMakeLists.txt
Chapter04_QueuesBuffersBackpressure/QueueMeasurementDemo/: CMakeLists.txt  main.cpp
Chapter05_AbstractTheWhat/: CMakeLists.txt  README.md
Chapter05_AbstractTheWhat/examples/: main.cpp
Chapter05_AbstractTheWhat/include/ImagingCapabilities/: AdjustIntegration.h  Defaults.h  Geometry.h  IAreaOfInterest.h  IBinning.h  IGain.h  IImageSource.h  IIntegration.h  IOffset.h  ImageBlock.h  Range.h
Chapter06_SchedulingAndTiming/: CMakeLists.txt
Chapter06_SchedulingAndTiming/timing_demo/: CMakeLists.txt  latency_probe.cpp  plot_latency.py  run_latency_scenario.sh  run_timing_demo.sh
Chapter07_Filtering/: plot_filtering.py  run_filtering_demo.sh
Chapter07_Filtering/FilteringDemo/: CMakeLists.txt  ExponentialFilter.h  MovingAverage.h  main.cpp
Chapter07_Filtering/MeasurementValidator/: CMakeLists.txt  MeasurementValidator.cpp  MeasurementValidator.h
Chapter07_Filtering/measurement_validator/: CMakeLists.txt  MeasurementValidator.cpp  MeasurementValidator.h
Chapter07_Filtering/tests/: CMakeLists.txt
Chapter07_Filtering/tests/MeasurementValidator/: CMakeLists.txt  MeasurementValidatorTests.cpp
Common/: CMakeLists.txt
Common/include/: BoundedQueue.h  EpollReactor.h  IReadableSource.h  ImmutableByteView.h  MessageHeader.h  MutableByteView.h  NMEAExtractionStream.h  NMEAInsertionStream.h  NMEAParseStatus.h  NMEATokenizer.h  PortStats.h  SignalFdSource.h  Status.h  TimerFdSource.h  UartLineReceiver.h  UdpDatagramReceiver.h
Common/src/: EpollReactor.cpp  NMEAExtractionStream.cpp  NMEAInsertionStream.cpp  NMEATokenizer.cpp  SignalFdSource.cpp  TimerFdSource.cpp  UartLineReceiver.cpp  UdpDatagramReceiver.cpp
Common/tests/: BoundedQueueMain.cpp  NmeaTestMain.cpp
Tools/: CMakeLists.txt
Tools/heap_monitor/: CMakeLists.txt  README.md
Tools/heap_monitor/include/heap_monitor/: HeapMonitor.h
Tools/heap_monitor/src/: HeapMonitor.cpp
Tools/heap_monitor/tests/: HeapMonitorTests.cpp
Tools/measurement_generator/: CMakeLists.txt  MeasurementGenerator.cpp  MeasurementGenerator.h  README.md  generate_example.sh  main.cpp  plot_measurements.py
Tools/nmea_sim/: CMakeLists.txt  FileTransmitEndpoint.cpp  FileTransmitEndpoint.h  ITransmitEndpoint.h  NmeaSentence.cpp  NmeaSentence.h  NmeaSimApp.cpp  NmeaSimApp.h  Options.h  StdoutTransmitEndpoint.cpp  StdoutTransmitEndpoint.h  StreamScheduler.cpp  StreamScheduler.h  TransmitEndpointFactory.h  UartTransmitEndpoint.cpp  UartTransmitEndpoint.h  UdpEndpointParse.h  UdpTransmitEndpoint.cpp  UdpTransmitEndpoint.h  ValueGenerator.cpp  ValueGenerator.h  main.cpp
